--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,18 @@
         <item>Prim</item>
         <item>Boruvka</item>
     </string-array>
+
+    <string-array name="drivers">
+        <item>Manual</item>
+        <item>WallFollower</item>
+        <item>Wizard</item>
+    </string-array>
+
+    <string-array name="robots">
+        <item>Premium</item>
+        <item>Mediocre</item>
+        <item>Soso</item>
+        <item>Shaky</item>
+    </string-array>
+
 </resources>
